Thu Jul 31 16:50:29 2003 George Edwards <g.edwards@vanderbilt.edu>

        * examples/handcrafted/BasicSP_EC/EC/EC_svnt.h:
        * examples/handcrafted/BasicSP_EC/EC/EC_svnt.cpp:
        * examples/handcrafted/BasicSP_EC/BMDevice/BMDevice_svnt.h:
        * examples/handcrafted/BasicSP_EC/BMDevice/BMDevice_svnt.cpp:
        * examples/handcrafted/BasicSP_EC/BMClosedED/BMClosedED_svnt.h:
        * examples/handcrafted/BasicSP_EC/BMClosedED/BMClosedED_svnt.cpp:

        Made modifications requested. Added @@ Bala comments
        to indicate changes.

2003-07-31  Diego Sevilla  <dsevilla@ditec.um.es>

        * examples/OEP/BasicSP/EC/EC_exec.{cpp,h}: Changed the exception
	specification for the new_EC method (explicit home operations
	don't throw CCMException.)

	* examples/OEP/Display/RateGen/RateGen_exec.{cpp,h}: Ditto.

        * CIDLC/*: Adapted the CIDL compiler to work with the new CCF
        library.  Basically the same code is generated with small bugs
        fixed.

Wed Jul 30 07:26:29 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* examples/handcrafted/BasicSP_EC/EC/EC_svnt.h:
	* examples/handcrafted/BasicSP_EC/EC/EC_svnt.cpp: Added @@ George
	  comments for George. This is a code review. Same comments apply
	  to other components.

Tue Jul 29 15:36:20 2003  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/*.*: Replaced old version with a new one.

Thu Jul 24 16:22:27 2003  George Edwards <g.edwards@vanderbilt.edu>

        Added new files:
        * examples/handcrafted/BasicSP_EC/*.*:
        * examples/handcrafted/BasicSP_EC/BMClosedED/*.*:
        * examples/handcrafted/BasicSP_EC/BMDevice/*.*:
        * examples/handcrafted/BasicSP_EC/BMDisplay/*.*:
        * examples/handcrafted/BasicSP_EC/descriptors/*.*:
        * examples/handcrafted/BasicSP_EC/EC/*.*:

        Modified BasicSP example to use TAO's RT event channel for
        event propagation. This involved modifications to each component's