@@ -1,3 +1,13 @@
+2003-07-31  Diego Sevilla  <dsevilla@ditec.um.es>
+
+	* CIDLC/ServantHeaderGenerator.cpp: Removed usage of Traversal
+	namespace to avoid name clashing.
+
+	* CIDLC/ExecutorMappingGenerator.cpp:
+	* CCF/Example/CIDL/LocalExecutorMapping/ExecutorMappingGenerator.cpp:
+	Generate SessionContext by now instead of CCMContext for local
+	interfaces.
+
 Thu Jul 31 16:50:29 2003 George Edwards <g.edwards@vanderbilt.edu>
 
         * examples/handcrafted/BasicSP_EC/EC/EC_svnt.h:
